# Papyrus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: ButtonPanel.cpp.7C16DD7C5906B70E.idx  ButtonPanel.h.FB389F87FA33595B.idx  CodeEditor.cpp.5BAB7618F96C7406.idx  CodeEditor.h.7D7FAE2063B7B1D2.idx  CodeEditorTab.cpp.0323AF660AEEC377.idx  CodeEditorTab.h.0A59C85138E44BDA.idx  FileBrowser.cpp.B27E439D3804ED5F.idx  FileBrowser.h.EF72764C0A9F9484.idx  FileManager.cpp.D4111B10AB60335D.idx  FileManager.h.ECB570FDC4123566.idx  QTNote.cpp.200C663762868A1A.idx  QTNote.h.87329EDECF76213E.idx  TabManagerInterface.h.7FA701E8CC602629.idx  main.cpp.C0A6020C05ACA2C0.idx
include/: ButtonPanel.h  CodeEditor.h  CodeEditorTab.h  DocumentManager.h  FileActionHandler.h  FileBrowser.h  FileManager.h  QTNote.h  TabManagerInterface.h
resources/: icon.rc  resources.qrc
src/: ButtonPanel.cpp  CodeEditor.cpp  CodeEditorTab.cpp  DocumentManager.cpp  FileActionHandler.cpp  FileBrowser.cpp  FileManager.cpp  QTNote.cpp
